RESOLVED FIXED292626
(Regression 15.2) Auto-upgrading some hosts to https that rely on localhost subresource causes breakage
https://bugs.webkit.org/show_bug.cgi?id=292626
Summary (Regression 15.2) Auto-upgrading some hosts to https that rely on localhost s...
Matthew Finkel
Reported 2025-05-06 12:28:20 PDT
Auto-upgrading some hosts to https that rely on localhost subresource causes breakage
Attachments
Matthew Finkel
Comment 1 2025-05-06 12:28:22 PDT
Matthew Finkel
Comment 2 2025-05-06 12:36:32 PDT
EWS
Comment 3 2025-05-30 13:01:46 PDT
Committed 295624@main (549ae69ade48): <https://commits.webkit.org/295624@main> Reviewed commits have been landed. Closing PR #45020 and removing active labels.
EWS
Comment 4 2025-05-31 14:19:40 PDT
Committed 289651.547@safari-7621-branch (0fde666acec8): <https://commits.webkit.org/289651.547@safari-7621-branch> Reviewed commits have been landed. Closing PR #3129 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.