(Regression 15.2) Auto-upgrading some hosts to https that rely on localhost subresource causes breakage https://bugs.webkit.org/show_bug.cgi?id=292626 rdar://140368377

Reviewed by NOBODY (OOPS!).

Safari 15.2 enabled a HTTPS auto-upgrade behavior that automatically upgrades
http:// urls to https:// on cross-site navigations. This is generally web
compatible, and both Chrome and Firefox have shipped some version of this for a
few years at this point. However, WebKit does not treat localhost or loopback
connections as secure, unlike Chromium and Gecko, and that causes unique
breakage in some cases. This patch adds a quirk for particularly problematic
hosts where this causes breakage.

Tested manually.

* Source/WebCore/loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::updateRequestAfterRedirection):
(WebCore::CachedResourceLoader::requestResource):
* Source/WebCore/page/Quirks.cpp:
(WebCore::shouldNotAutoUpgradeToHTTPSInternal):
(WebCore::Quirks::shouldNotAutoUpgradeToHTTPS):
* Source/WebCore/page/Quirks.h: